# linuxadmin

./: .gitignore  README.md  course.json  pyproject.toml
.github/workflows/: main.yml
2024-brno-jaro-streda/: course.json
2024-brno-jaro-streda/bash-1/: index.html
2024-brno-jaro-streda/bash-2/: index.html
2024-brno-jaro-streda/bash-intro/: index.html
2024-brno-jaro-streda/filedir/: index.html
2024-brno-jaro-streda/installation/: index.html  virtualbox.html
2024-brno-jaro-streda/output-files/: index.html
2024-brno-jaro-streda/pipefilter/: index.html
2024-brno-jaro-streda/process-log/: index.html
2024-brno-jaro-streda/signals/: index.html
2024-brno-jaro-streda/users/: index.html
2025-brno-podzim-streda/: course.json
2025-brno-podzim-streda/bash-2/: index.html
2025-brno-podzim-streda/basics/: index.html
2025-brno-podzim-streda/branching/: index.html
2025-brno-podzim-streda/cicd/: index.html
2025-brno-podzim-streda/collaboration/: index.html
2025-brno-podzim-streda/create/: index.html
2025-brno-podzim-streda/cron/: index.html
2025-brno-podzim-streda/echo/: index.html
2025-brno-podzim-streda/fd/: index.html
2025-brno-podzim-streda/git/: index.html
2025-brno-podzim-streda/git-collaboration-2in1/: index.html
2025-brno-podzim-streda/gnome-basics/: index.html
2025-brno-podzim-streda/gnome-tools/: index.html
2025-brno-podzim-streda/grep-find/: index.html
2025-brno-podzim-streda/hardware-basics/: index.html
2025-brno-podzim-streda/httpd-service/: index.html
courses/: 2025-brno-podzim-streda.yml
lessons/git/basics/: index.md
(+75 files in other folders)
