[tool.poetry]
name = "naucse.python.cz"
version = "0"
description = "Website with learning materials / Stránka s učebními materiály"
authors = ["Petr Viktorin <encukou@gmail.com>", "Naucse contributors"]

[tool.poetry.dependencies]
python = "^3.9"
naucse = "^0.4.0"
pygments-pytest = "^2.2.0"
naucse-render = "^1.6"

[tool.poetry.extras]
ghp-compiled = ["ghp-import"]

[tool.poetry.scripts]
compile = "naucse_render.cli:compile"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
